--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
             font-family: Arial, sans-serif;
             margin: 40px;
             padding: 20px;
-            background-color: #f8f9fa;
+            background-color: #f4f4f4;
+            text-align: center;
         }
         .container {
             max-width: 800px;
@@ -20,30 +21,44 @@
             border-radius: 8px;
         }
         h1 {
-            text-align: center;
             color: #333;
+        }
+        h2 {
+            color: #555;
         }
         p {
             line-height: 1.6;
             font-size: 16px;
+            text-align: justify;
+        }
+        img {
+            width: 100%;
+            border-radius: 8px;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>My Learnings from BCVS-I Course</h1>
+        <img src="https://source.unsplash.com/800x400/?communication,learning" alt="Communication and Learning">
+        
         <p>Hello everyone! My name is <strong>[Your Name]</strong>, and I am a student of the CSBS department. I recently completed my BCVS-I course, and I wanted to share my learnings and experiences from it.</p>
 
         <h2>What I Expected</h2>
+        <img src="https://source.unsplash.com/800x400/?student,expectations" alt="Expectations">
         <p>Initially, I thought BCVS-I (Business Communication and Value Science) would be just another theory-based subject focusing on basic communication rules. Since my main focus has been on programming languages like C and Python, I wasn't sure how much this course would contribute to my technical skills.</p>
 
         <h2>What I Learned</h2>
+        <img src="https://source.unsplash.com/800x400/?learning,teamwork" alt="Learning Process">
         <p>As the course progressed, I realized BCVS-I is much more than just theoretical communication concepts. It taught me how to express my ideas effectively, both in written and verbal form. One of the key takeaways was understanding the importance of soft skills in the IT industry.</p>
 
         <h2>My Favorite Part</h2>
+        <img src="https://source.unsplash.com/800x400/?group,discussion" alt="Group Discussion">
         <p>The part I liked the most was the interactive sessions and group discussions. These activities helped me overcome my hesitation in speaking up and made learning more fun.</p>
 
         <h2>Final Thoughts</h2>
+        <img src="https://source.unsplash.com/800x400/?success,learning" alt="Success in Learning">
         <p>Overall, BCVS-I turned out to be a valuable course that helped me beyond just academics. I now understand that technical skills and communication go hand in hand, and I will continue to improve both.</p>
 
         <p>That’s all for now! Wishing all my fellow students the best in their learning journey. Let’s keep growing together!</p>
